--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up</title>
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <h1>Sign Up</h1>
@@ -16,6 +19,13 @@
         placeholder="Confirm Password"
         required
       />
+
+      <!-- new admin checkbox -->
+      <label>
+        <input type="checkbox" name="admin" value="true" />
+        Register as admin
+      </label>
+
       <button type="submit">Sign Up</button>
     </form>
   </body>
